syntax = "proto3";

package pubg.jsonschema;
option go_package = "github.com/jaggerzhuang1994/kratos-foundation/cmd/protoc-gen-jsonschema/pkg/proto";

import "google/protobuf/descriptor.proto";
import "google/protobuf/any.proto";

// Not extendable, just define structure
// Plugin wide options
message PluginOptions {
  /**
    WIP: visibility_level is used to determine which message should be generated.
    Currently not work.
  */
  uint32 visibility_level = 1;

  // entrypoint_message 用来指定哪一个 Message 作为整个 JSON Schema 的入口（根对象）。
  // 示例:
  //   --jsonschema_opt=entrypoint_message=MyMessage
  string entrypoint_message = 2;

  // output_file_suffix 用来决定生成的输出文件名后缀。
  // 取值必须以 .json、.yaml 或 .yml 结尾。
  // 默认值: .schema.json
  // 示例:
  //   --jsonschema_opt=output_file_suffix=.schema.json
  //   --jsonschema_opt=output_file_suffix=.schema.yaml
  string output_file_suffix = 10;

  // draft 用来指定生成 JSON Schema 时所使用的规范（Draft）版本。
  // 取值必须是以下之一：Draft04、Draft05、Draft06、Draft07、Draft201909、Draft202012。
  // 默认值: Draft202012
  // 示例:
  //   --jsonschema_opt=draft=Draft202012
  Draft draft = 12;

  // mandatory_nullable 用来决定插件是否将 optional 字段视为 nullable。
  // 许多编程语言并不区分 undefined 和 null。
  // 但像 JavaScript、TypeScript 这样的脚本语言可以明确区分这两者。
  // 默认值: true
  // 示例:
  //   --jsonschema_opt=mandatory_nullable=true
  //   --jsonschema_opt=mandatory_nullable=false
  bool mandatory_nullable = 13;

  // preserve_proto_field_names 用来决定输出的 JSON 字段名是否与 proto 中的字段名完全一致。
  // 如果不启用该选项，字段名将优先使用字段上声明的 json_name，否则会自动转换为 lowerCamelCase。
  // 这种默认行为与 Protobuf 官方的标准 JSON 格式（ProtoJSON）的处理方式保持一致。
  // 默认值: false
  // 示例:
  //   --jsonschema_opt=preserve_proto_field_names=true
  //   --jsonschema_opt=preserve_proto_field_names=false
  bool preserve_proto_field_names = 15;

  // additional_properties 选项用于控制所有 message 的 additionalProperties 属性。
  // 如果你希望为所有 message 统一设置 additionalProperties，可以使用 always_true 或 always_false。
  // 如果你只想为未显式定义该属性的 message 设置 additionalProperties，可以使用 default_true 或 default_false。
  // 默认值: DoNothing
  // 示例:
  //   --jsonschema_opt=additional_properties=AlwaysTrue
  //   --jsonschema_opt=additional_properties=AlwaysFalse
  //   --jsonschema_opt=additional_properties=DefaultTrue
  //   --jsonschema_opt=additional_properties=DefaultFalse
  //   --jsonschema_opt=additional_properties=DoNothing
  PluginAdditionalProperties additional_properties = 16;

  // 该选项用于决定插件是否遵循 ProtoJSON 格式中字段的 presence 语义。
  // presence 语义的字段：optional字段、message类型字段、oneof里的字段
  // 如果设置为 true，对于那些具有 presence 语义的字段，插件会在生成的 JSON Schema 中为这些字段添加 required 关键字。
  // 默认值: false
  // 示例:
  //   --jsonschema_opt=respect_protojson_presence=true
  //   --jsonschema_opt=respect_protojson_presence=false
  bool respect_protojson_presence = 17;

  // 该选项用于决定插件是否遵循 ProtoJSON 格式中对 int64 字段的处理方式。
  // 如果设置为 true，int64 字段在生成的 JSON Schema 中会被当作字符串（string）处理；否则会被当作数值（number）处理。
  // 默认值: false
  // 示例:
  //   --jsonschema_opt=respect_protojson_int64=true
  //   --jsonschema_opt=respect_protojson_int64=false
  bool respect_protojson_int64 = 18;

  // 合并其他 jsonschema 需要 draft 一致才可以合并
  // 默认值：空
  // 示例:
  //   --jsonschema_opt=respect_protojson_int64=true
  string merge = 19;
}

enum PluginAdditionalProperties {
  DefaultAdditionalProperties = 0;
  // always_true: all messages to have additional_properties set to true
  AlwaysTrue = 1;
  // always_false: all messages to have additional_properties set to false
  AlwaysFalse = 2;
  // default_true: all messages will have additional_properties set to true if not defined
  DefaultTrue = 3;
  // default_false: all messages will have additional_properties set to false if not defined
  DefaultFalse = 4;
  // do_nothing: do not set additional_properties default value
  DoNothing = 5;
}

enum Draft {
  DraftDefault = 0;
  Draft04 = 1;
  Draft05 = 2;
  Draft06 = 3;
  Draft07 = 4;
  Draft201909 = 5;
  Draft202012 = 6;
}

message FileOptions {
  /**
    WIP: visibility_level is used to determine which message should be generated.
    Currently not work.
  */
  uint32 visibility_level = 1;

  /**
    entrypoint_message is used which message should be entrypoint object of schema.
    default: inherit from PluginOptions.entrypoint_message
  */
  string entrypoint_message = 2;

  string title = 5;
  string description = 6;
}

message MessageOptions {
  /**
    WIP: visibility_level is used to determine which message should be generated.
    Currently not work.
  */
  uint32 visibility_level = 1;

  string title = 2;
  string description = 3;

  ObjectKeywords object = 10;
}

message ObjectKeywords {
  optional bool additional_properties = 1;
  // repeated JsonSchema additional_properties = 10;
  optional uint32 min_properties = 2;
  optional uint32 max_properties = 3;
}

message FieldOptions {
  /**
    WIP: visibility_level is used to determine which message should be generated.
    Currently not work.
  */
  uint32 visibility_level = 1;

  string title = 2;
  string description = 3;
  bool nullable = 5;

  google.protobuf.Any default = 10;
  ArrayKeywords array = 11;
  NumericKeywords numeric = 12;
  StringKeywords string = 13;
}

message ArrayKeywords {
  optional uint32 min_items = 1;
  optional uint32 max_items = 2;
  optional bool unique_items = 3;

  // repeated JsonSchema contains = 3;
  // uint32 min_contains = 4;
  // uint32 max_contains = 5;
}

message NumericKeywords {
  oneof min {
    double inclusive_minimum = 1;
    double exclusive_minimum = 3;
  }
  oneof max {
    double inclusive_maximum = 2;
    double exclusive_maximum = 4;
  }
  optional int32 multiple_of = 5;
}

message StringKeywords {
  optional uint32 min_length = 1;
  optional uint32 max_length = 2;
  string pattern = 3;
  string format = 4;
  repeated string enum = 5;
}

message EnumOptions {
  MappingType mapping_type = 1;
  string title = 2;
  string description = 3;

  enum MappingType {
    MapToString = 0;
    MapToNumber = 1;
    MapToCustom = 2;
  }
}

message EnumValueOptions {
  google.protobuf.Any custom_value = 10;
}

extend google.protobuf.FileOptions {
  FileOptions file = 11341;
}

extend google.protobuf.MessageOptions {
  MessageOptions message = 11342;
}

extend google.protobuf.FieldOptions {
  FieldOptions field = 11343;
}

extend google.protobuf.EnumOptions {
  EnumOptions enum = 11344;
}

extend google.protobuf.EnumValueOptions {
  EnumValueOptions enum_value = 11345;
}
